# async-debugger

./: .gitignore  README.md  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.zed/: settings.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: common.rs  error.rs  infra.rs  lib.rs  main.rs
src-tauri/src/commands/: applications.rs
src-tauri/src/context/: application.rs  connection.rs  mod.rs  task.rs
src-tauri/src/domain/: application.rs  mod.rs  storable.rs  task.rs
src-tauri/src/infra/: guard.rs  storage.rs
src-tauri/src/mappers/: mod.rs  tasks.rs
src-tauri/src/state_manager/: connection_manager.rs  database.rs  mod.rs  state.rs
src-tauri/src/ui_manager/: mod.rs
src/layout/: AppLayout.vue
src/layout/header/: VerticalHeader.vue
src/layout/sidebar/: NavItem.vue  VerticalSidebar.vue  sidebarItems.ts
src/plugins/: vuetify.ts
src/router/: MainRoutes.ts  index.ts
src/stores/: application.ts  layout.ts
src/types/: applications.d.ts  tasks.d.ts
src/views/: Applications.vue  EditApplication.vue  SystemInformation.vue  Tasks.vue
