[package]
name = "tokio-display"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tokio_display_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tokio = { version = "1.43.0", features = ["sync"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console-api = { version = "0.8.1", features = ["transport"] }
tonic = "0.12.3"
anyhow = "1.0.95"
uuid = { version = "1.11.1", features = ["v4"] }
log = "0.4.22"
thiserror = "2.0.11"
url = { version = "2.5.4", features = ["serde"] }
tauri-plugin-store = "2"
env_logger = "0.10.0"
async-trait = "0.1.86"
dirs = "6.0.0"

